Removed redundant blank lines and organised imports